add - iniciando features de changePassword e updateUser
